--- a/templates/registration/loading.html
+++ b/templates/registration/loading.html
@@ -1,6 +1,7 @@
 
-<div class="card">
+<div class="card text-center loading" style="color: #000;" dir="rtl">
     <div class="circle-loader">
         <div class="checkmark draw"></div>
     </div>
+    <h6>لطفا صبر کنید ...</h6>
 </div>
