--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -18,21 +18,18 @@
     <img class="registration-card-icon" src="{% static 'img/logo.png' %}" alt="ChamranLogo">
     <p class="ChamranTeam">چمران تیم</p>
     <div class="login-div">
-        <form method="post" novalidate>
+        <form method="post" novalidate class="login-ajax" data-url="{% url 'chamran:login_ajax' %}">
             {% csrf_token %}
             <div class="username">
                 <label for="id_username">نام کاربری</label>
                 {{ form.username|attr:"id:id_username" }}
-                {{ form.username.errors }}
                 <i class="fas fa-user-alt fa-lg"></i>
             </div>
             <div class="password">
                 <label for="id_password">رمز عبور</label>
-                {{ error }}
                 {{ form.password|attr:"id:id_password" }}
-                {{ form.password.errors }}
                 <i class="fas fa-lock fa-lg"></i>
-                <button type="submit" name="sign_in" class="Enter-btn">ورود</button>
+                <button type="submit" class="Enter-btn">ورود</button>
             </div>
         </form>
     </div>
@@ -40,13 +37,13 @@
         <form method="post" action="" novalidate class="sign-up-ajax" data-url="{% url 'chamran:signup_email' %}">
             {% csrf_token %}
             <div class="user-type-container">
-                {#                <input type="radio" name="user-type" id="researcher" value="researcher">#}
-                {#                {{ form.account_type.2|attr:"id:researcher" }}#}
-                {#                <label for="researcher" class="user-type researcher text-center">پژوهشگر</label>#}
-                {#                <input type="radio" name="user-type" id="expert" value="expert">#}
-                {#                <label for="expert" class="user-type expert text-center">استاد</label>#}
-                {#                <input type="radio" name="user-type" id="industry" value="industry">#}
-                {#                <label for="industry" class="user-type industry text-center">صنعت</label>#}
+{#                                <input type="radio" name="user-type" id="researcher" value="researcher">#}
+{#                                {{ form.account_type.2|attr:"id:researcher" }}#}
+{#                                <label for="researcher" class="user-type researcher text-center">پژوهشگر</label>#}
+{#                                <input type="radio" name="user-type" id="expert" value="expert">#}
+{#                                <label for="expert" class="user-type expert text-center">استاد</label>#}
+{#                                <input type="radio" name="user-type" id="industry" value="industry">#}
+{#                                <label for="industry" class="user-type industry text-center">صنعت</label>#}
                 {{ register_form.account_type }}
 
             </div>
