--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -187,6 +187,7 @@
                     <div class="inner-card card">
                         <div class="row">
                             <div class="col-lg-12 text-right">
+                                <span class="label header"><span class="sub-header"></span></span>
                                 <div class="w-100 text-center">
                                     <div class="row">
                                         <div class="col-lg-7 col-12">روحیه کار تیمی</div>
