--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>ورود</title>
     {% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/css/iziToast.css">
-    <link rel="stylesheet" href="{% static 'css/style1.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-{% include 'registration/loading.html' %}
-<div class="card registration">
+<div class="card">
     <img class="registration-card-icon" src="{% static 'img/logo.png' %}" alt="ChamranLogo">
-    <p class="ChamranTeam">
-        {% block page %}{% endblock %}
-    </p>
+    <p class="ChamranTeam">ef</p>
     
     {% if user.is_authenticated %}
         <p>{{user.username}}</p>
