--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -10,7 +10,7 @@
           rel="stylesheet">
 {% endblock %}
 
-{% block name %}دکتر احسان شریف{% endblock %}
+{% block name %}{{ request.user.expertuser.expertform }}{% endblock %}
 
 {% block dialog %}
     {% include 'expert/layouts/dialog.html' %}
@@ -159,9 +159,34 @@
                             <div class="col-lg-12 text-right">
                                 <span class="label header"></span>
                                 <div class="executive text-center w-100">
-                                    <span class="initial-value"
-                                          style="border: 1px dashed #bdbdbd;width: fit-content;border-radius: 0.25em;padding: 5px 10px;font-size: 13px;font-weight: 300;">برای افزودن سابقه جدید روی <i
-                                            class="fas fa-plus"></i>  کلیک کنید!  </span>
+                                    {% if not executive_instance %}
+                                        <span class="initial-value"
+                                              style="border: 1px dashed #bdbdbd;width: fit-content;border-radius: 0.25em;padding: 5px 10px;font-size: 13px;font-weight: 300;">برای افزودن سابقه جدید روی <i
+                                                class="fas fa-plus"></i>  کلیک کنید!  </span>
+                                    {% else %}
+                                        <table class='table mtop-lg-25'>
+                                            <thead>
+                                            <tr>
+                                                <td>سمت</td>
+                                                <td>از تاریخ:</td>
+                                                <td>تا تاریخ:</td>
+                                                <td>محل خدمت:</td>
+                                                <td>شهر:</td>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            {% for instance in executive_instance %}
+                                                <tr>
+                                                    <td>{{ instance.executive_post }}</td>
+                                                    <td>{{ instance.date_start_post }}</td>
+                                                    <td>{{ instance.date_end_post }}</td>
+                                                    <td>{{ instance.organization }}</td>
+                                                    <td>{{ instance.city }}</td>
+                                                </tr>
+                                            {% endfor %}
+                                            </tbody>
+                                        </table>
+                                    {% endif %}
                                 </div>
                                 <button type="button" class="executive-btn success-btn">افزودن</button>
                             </div>
@@ -174,9 +199,31 @@
                             <div class="col-lg-12 text-right">
                                 <span class="label header"> <span class="sub-header"></span></span>
                                 <div class="studious text-center w-100">
-                                    <span class="initial-value"
-                                          style="border: 1px dashed #bdbdbd;width: fit-content;border-radius: 0.25em;padding: 5px 10px;font-size: 13px;font-weight: 300;">برای افزودن سابقه جدید روی <i
-                                            class="fas fa-plus"></i>  کلیک کنید!  </span>
+                                    {% if not research_instance %}
+                                        <span class="initial-value"
+                                              style="border: 1px dashed #bdbdbd;width: fit-content;border-radius: 0.25em;padding: 5px 10px;font-size: 13px;font-weight: 300;">برای افزودن سابقه جدید روی <i
+                                                class="fas fa-plus"></i>  کلیک کنید!  </span>
+                                    {% else %}
+                                        <table class='table mtop-lg-25'>
+                                            <thead>
+                                            <tr>
+                                                <td>عنوان طرح پژوهشی</td>
+                                                <td>نام مجری</td>
+                                                <td>مسئول اجرا/همکار</td>
+
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            {% for instance in research_instance %}
+                                                <tr>
+                                                    <td>{{ instance.research_title }}</td>
+                                                    <td>{{ instance.researcher }}</td>
+                                                    <td>{{ instance.co_researcher }}</td>
+                                                </tr>
+                                            {% endfor %}
+                                            </tbody>
+                                        </table>
+                                    {% endif %}
                                 </div>
                                 <button type="button" class="research-btn success-btn">افزودن</button>
                             </div>
@@ -190,9 +237,35 @@
                                 <span class="label header"> <span
                                         class="sub-header"></span></span>
                                 <div class="article text-center w-100">
-                                    <span class="initial-value"
-                                          style="border: 1px dashed #bdbdbd;width: fit-content;border-radius: 0.25em;padding: 5px 10px;font-size: 13px;font-weight: 300;">برای افزودن سابقه جدید روی <i
-                                            class="fas fa-plus"></i>  کلیک کنید!  </span>
+                                    {% if not paper_instance %}
+                                        <span class="initial-value"
+                                              style="border: 1px dashed #bdbdbd;width: fit-content;border-radius: 0.25em;padding: 5px 10px;font-size: 13px;font-weight: 300;">برای افزودن سابقه جدید روی <i
+                                                class="fas fa-plus"></i>  کلیک کنید!  </span>
+                                    {% else %}
+                                        <table class='table mtop-lg-25'>
+                                            <thead>
+                                            <tr>
+                                                <td>عنوان مقاله</td>
+                                                <td>تاریخ انتشار</td>
+                                                <td>محل دقیق انتشار</td>
+                                                <td>Impact Factor</td>
+                                                <td>تعداد ارجاع به مقاله شما</td>
+                                                <td></td>
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            {% for instance in paper_instance %}
+                                                <tr>
+                                                    <td>{{ instance.research_title }}</td>
+                                                    <td>{{ instance.date_published }}</td>
+                                                    <td>{{ instance.published_at }}</td>
+                                                    <td>{{ instance.impact_factor }}</td>
+                                                    <td>{{ instance.citation }}</td>
+                                                </tr>
+                                            {% endfor %}
+                                            </tbody>
+                                        </table>
+                                    {% endif %}
 
                                 </div>
                                 <button type="button" class="article-btn success-btn">افزودن</button>
@@ -204,8 +277,9 @@
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <span class="sub-header">چند نمونه از بهترین افتخارات - مقالات خاص، جوایز و ...- به همراه سال وقوع</span>
-                                <textarea dir="rtl" rows="5" class="w-100" id="honours"
-                                          placeholder="اینجا وارد کنید ..." style="margin-top: 0;"></textarea>
+                                {#                                <textarea dir="rtl" rows="5" class="w-100" id="honours"#}
+                                {#                                          placeholder="اینجا وارد کنید ..." style="margin-top: 0;"></textarea>#}
+                                {{ expert_info_form.awards|attr:"id:honours"|attr:"class:w-100"|attr:"dir:rtl"|attr:"placeholder:اینجا وارد کنید ..."|attr:"style:margin-top: 0;"|attr:"rows:5" }}
                             </div>
                         </div>
                     </div>
@@ -217,26 +291,32 @@
                                     <div class="row">
                                         <div class="col-lg-7 col-12">روحیه کار تیمی</div>
                                         <div class="col-lg-5 col-12">
-                                            <div class="radio-item">
-                                                <input type="radio" name="group-work" id="group-work-1" value="1"><label
-                                                    for="group-work-1" class="radio-label"></label>
-                                            </div>
-                                            <div class="radio-item">
-                                                <input type="radio" name="group-work" id="group-work-2" value="2"><label
-                                                    for="group-work-2" class="radio-label"></label>
-                                            </div>
-                                            <div class="radio-item">
-                                                <input type="radio" name="group-work" id="group-work-3" value="3"><label
-                                                    for="group-work-3" class="radio-label"></label>
-                                            </div>
-                                            <div class="radio-item">
-                                                <input type="radio" name="group-work" id="group-work-4" value="4"><label
-                                                    for="group-work-4" class="radio-label"></label>
-                                            </div>
-                                            <div class="radio-item">
-                                                <input type="radio" name="group-work" id="group-work-5" value="5"><label
-                                                    for="group-work-5" class="radio-label"></label>
-                                            </div>
+                                            {% for radio in eq_test_form.team_work %}
+                                                <div class="radio-item">
+                                                    <label for="{{ radio.id_for_label }}" class="radio-label">
+                                                        {{ radio.tag }}
+                                                    </label>
+                                                </div>
+
+                                            {% endfor %}
+                                            {#                                                <input type="radio" name="team_work" id="group-work-1" value="1"><label#}
+                                            {#                                                    for="group-work-1" class="radio-label"></label>#}
+                                            {#                                            <div class="radio-item">#}
+                                            {#                                                <input type="radio" name="team_work" id="group-work-2" value="2"><label#}
+                                            {#                                                    for="group-work-2" class="radio-label"></label>#}
+                                            {#                                            </div>#}
+                                            {#                                            <div class="radio-item">#}
+                                            {#                                                <input type="radio" name="team_work" id="group-work-3" value="3"><label#}
+                                            {#                                                    for="group-work-3" class="radio-label"></label>#}
+                                            {#                                            </div>#}
+                                            {#                                            <div class="radio-item">#}
+                                            {#                                                <input type="radio" name="team_work" id="group-work-4" value="4"><label#}
+                                            {#                                                    for="group-work-4" class="radio-label"></label>#}
+                                            {#                                            </div>#}
+                                            {#                                            <div class="radio-item">#}
+                                            {#                                                <input type="radio" name="team_work" id="group-work-5" value="5"><label#}
+                                            {#                                                    for="group-work-5" class="radio-label"></label>#}
+                                            {#                                            </div>#}
                                         </div>
                                     </div>
                                     <div class="row">
@@ -426,7 +506,7 @@
                                     </div>
                                 </div>
                                 <span class="sub-header"><span class="star-warning"></span>اگر از توانایی هایتان در
-                                    موارد بالا اطمینان کامل ندارید می تواند از این آزمون کمک بگیرید! <a
+                                    موارد بالا اطمینان کامل ندارید می توانید از این آزمون کمک بگیرید! <a
                                             href="https://www.16personalities.com/fa">تست هوش هیجانی (EQ)</a> </span>
                             </div>
                         </div>
