--- a/expert/templates/expert/messages.html
+++ b/expert/templates/expert/messages.html
@@ -119,7 +119,9 @@
                 data: {},
                 dataType: 'json',
                 success: function(data){
-                    console.log(data);
+                    var msg = JSON.parse(data);
+                    console.log(msg.title);
+
                 }
             });
         });
