--- a/expert/static/expert/css/style.css
+++ b/expert/static/expert/css/style.css
@@ -1,4 +1,3 @@
-@import "fontiran.css";
 @import "comments.css";
 .fixed-back .question-attach{
     margin-bottom: 10px;
@@ -670,161 +669,6 @@ span.border-span{
 .next-line{
   left: 0;
 }
-.vote-question{
-    border: 1px solid #bdbdbd;
-    border-radius: 50%;
-    position: absolute;
-    top: -5px;
-    left: 10px;
-    height: 30px;
-    width: 30px;
-    color: #bdbdbd;
-    background-color: #ffffff;
-    box-shadow: 2px 2px 5px 0 rgba(0,0,0,0.16);
-    z-index: 1;
-}
-.vote-question:hover{
-    color: #3ccd1c;
-    border-color: #3ccd1c;
-    box-shadow: 1px 1px 3px 0 rgba(0,0,0,0.16);
-    cursor: pointer;
-}
-.vote-question > span{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -45%);
-    font-size: 22px;
-    font-weight:300;
-}
-.vote-question-text{
-    position: absolute;
-    top: 35px;
-    left: 25px;
-    border: 1px solid #3ccd1c;
-    border-radius: 0 5px 5px 5px;
-    padding: 5px;
-    background-color: #fff;
-    color: #3ccd1c;
-    -webkit-box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.16);
-    -moz-box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.16);
-    box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.16);
-    font-size: 13px;
-    max-width: 50%;
-    z-index: 2;
-    display: none;
-}
-.vote-question-text:before{
-    content: '';
-    position: absolute;
-    top: -5px;
-    left: -1px;
-    height: 5px;
-    width: 5px;
-    border-left: 1px solid #3ccd1c;
-    background-color: #fff;
-}
-.vote-question-text:after{
-    content: '';
-    position: absolute;
-    top: -5px;
-    left: 0;
-    height: 5px;
-    width: 5px;
-    border-bottom: 1px solid #3ccd1c;
-    border-bottom-left-radius: 10px;
-    background-color: #fff;
-}
-input.vote-select + label{
-    position: relative;
-    top: 50%;
-    transform: translateY(50%);
-}
-input.vote-select.l +{
-    position: relative;
-    top: 0%;
-    left: 0%;
-    /*-webkit-transform: translate(-50%, -50%);*/
-    /*-moz-transform: translate(-50%, -50%);*/
-    /*-ms-transform: translate(-50%, -50%);*/
-    /*-o-transform: translate(-50%, -50%);*/
-    /*transform: translate(-50%, -50%);*/
-    width: 15px;
-    height: 15px;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    border-radius: 50%;
-}
-input.vote-select[value='0'] + label{
-    height: 40px;
-    width: 40px;
-    border: 1px solid #ff0505;
-    background-color: #ffffff;
-}
-input.vote-select[value='0'] + label:hover, input.vote-select[value='0']:checked + label{
-    background-color: #ff0505;
-    cursor: pointer;
-}
-input.vote-select[value='1'] + label{
-    height: 30px;
-    width: 30px;
-    border: 1px solid #ff0505;
-    background-color: #ffffff;
-}
-input.vote-select[value='1'] + label:hover, input.vote-select[value='1']:checked + label{
-    background-color: #ff0505;
-    cursor: pointer;
-}
-input.vote-select[value='2'] + label{
-    height: 20px;
-    width: 20px;
-    border: 1px solid #fff600;
-    background-color: #ffffff;
-}
-input.vote-select[value='2'] + label:hover, input.vote-select[value='2']:checked + label{
-    background-color: #fff600;
-    cursor: pointer;
-}
-input.vote-select[value='3'] + label{
-    height: 30px;
-    width: 30px;
-    border: 1px solid #009639;
-    background-color: #ffffff;
-}
-input.vote-select[value='3'] + label:hover, input.vote-select[value='3']:checked + label{
-    background-color: #009639;
-    cursor: pointer;
-}
-input.vote-select[value='4'] + label{
-    height: 40px;
-    width: 40px;
-    border: 1px solid #009639;
-    background-color: #ffffff;
-}
-input.vote-select[value='4'] + label:hover, input.vote-select[value='4']:checked + label{
-    background-color: #009639;
-    cursor: pointer;
-}
-.vote-content{
-    display: flex;
-    padding-right: 20px;
-    padding-left: 15px;
-    font-weight: 300;
-    color: #000;
-}
-.swiper-slide > .vote-content > .number{
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-.vote-select-label{
-    margin: 5px;
-    top: 0;
-    right: 0;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    border-radius: 50%;
-}
 /* show Project style*/
 .establish-time , .time-left{
     width: fit-content;
@@ -887,16 +731,16 @@ span.title-back{
     border-radius: 0.25em;
     position: relative;
 }
-.education-btn > i, .executive-btn > i, .research-btn > i, .article-btn > i{
+.education-btn > i, .executive-btn > i, .research-btn > i, .paper-btn > i{
   position: absolute;
   top: 5px;
   left: 15px;
 }
-.education-btn > i:hover, .executive-btn > i:hover, .research-btn > i:hover, .article-btn > i:hover{
+.education-btn > i:hover, .executive-btn > i:hover, .research-btn > i:hover, .paper-btn > i:hover{
   color: #3ccd1c;
   cursor: pointer;
 }
-.education-btn, .executive-btn, .research-btn, .article-btn, .technique{
+.education-btn, .executive-btn, .research-btn, .paper-btn, .technique{
     position: absolute;
     top: -55px;
     left: 5px;
