--- a/expert/templates/expert/layouts/dialog.html
+++ b/expert/templates/expert/layouts/dialog.html
@@ -1,25 +1,33 @@
-<div class="dialog-main technique-dialog-main">
-    <div class="dialog card text-right">
+{% load static %}
+<div class="fixed-back technique-dialog-main">
+    <div class="card text-right">
         <div class="close"></div>
-        <div class="row technique-dialog">
-            <div class="col-lg-12 text-right">
-                <span class="label header">تکنیک ها</span>
+        <div class="card-head">تکنیک ها</div>
+        <div class="container">
+            <div class='row'>
+                <div class='col-lg-12'>
+                    <span class='sub-header'>از میان تکنیک های طبقه بندی شده زیر، با کدام یک آشنایی دارید و میزان توانایی شما در هرکدام چقدر است؟<br> (لازم به ذکر است که آموزش تکنیک ها در تیم چمران ،به عنوان امتیاز بیشتر برای استاد گرامی تلقی می شود.)</span>
+                </div>
             </div>
-        </div>
-        <div class='row'>
-            <div class='col-lg-12'>
-                <span class='sub-header'>از میان تکنیک های طبقه بندی شده زیر، با کدام یک آشنایی دارید و میزان توانایی شما در هرکدام چقدر است؟<br> (لازم به ذکر است که آموزش تکنیک ها در تیم چمران ،به عنوان امتیاز بیشتر برای استاد گرامی تلقی می شود.)</span>
+            <div class="row">
+                <div class="col-12">
+                    <input type='text' dir='rtl' name='search_technique' placeholder='جستجو ...'
+                           id='search_technique' class="solid-label">
+                    <label for='search_technique'>
+                        <i class='fas fa-search fa-lg'></i>
+                    </label>
+                </div>
             </div>
+            <form method="post" action="">
+                <div class="row">
+                    <div class='col-lg-12'>
+                        <div id="fancy-tree"></div>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <input class="save-btn" type="submit" value="افزودن تکنیک">
+                </div>
+            </form>
         </div>
-        <div class="row">
-            <div class='col-lg-12'>
-                <input type='text' dir='rtl' name='search_technique' placeholder='جستجو ...' id='search_technique' class="solid-label">
-                <label for='search_technique'>
-                    <i class='fas fa-search fa-lg'></i>
-                </label>
-                <div id="fancy-tree"></div>
-            </div>
-        </div>
-        <button type="button" class="chamran_btn" style="left: 0;bottom: -1px;">افزودن تکنیک</button>
     </div>
 </div>
