date and view button fixed

--- a/templates/chamran_admin/messages.html
+++ b/templates/chamran_admin/messages.html
@@ -52,7 +52,7 @@
                                             <span>{{ message.0.get_short_text }}</span>
                                         </div>
                                         <button id="{{ message.0.id }}">مشاهده</button>
-                                        <div class="message-code">{{ message.3 }}</div>
+                                        <div class="message-code">{{ message.0.code }}</div>
                                     </div>
                                 </div>
                             </div>
