--- a/expert/templates/expert/layouts/executive_form.html
+++ b/expert/templates/expert/layouts/executive_form.html
@@ -1,40 +1,232 @@
-{% load static%}
+{% load static %}
+{% load widget_tweaks %}
 <div class="fixed-back executive_form">
-    <div class="card text-right">
+    <div class="card small-card text-right">
         <div class="close"></div>
         <div class="card-head">ثبت سابقه اجرایی</div>
         <div class="container">
-            <form method="post" action="">
+            <form method="post" action="" class="ajax-executive-form" data-url="{% url 'expert:ajax_executive' %}">
                 {% csrf_token %}
-                <div class='row'>
-                    <div class='col-lg-5'>
-                        <label for='duty'>سمت</label>
-                        <input type='text' id='duty' class='w-100'>
-                    </div>
-                </div>
                 <div class="row">
-                    <div class='col-lg-2'>
-                        <span class='center-vr'>زمان :</span>
+                    <div class="col-6">
+                        <div class='row'>
+                            <div class='col-lg-12'>
+                                <label for='duty'>سمت</label>
+                                {{ executive_form.executive_post|attr:"id:duty"|attr:"class:w-100" }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class='col-lg-2'>
+                                <span class='center-vr'>زمان :</span>
+                            </div>
+                            <div class='col-lg-5'>
+                                <label for='from'>از تاریخ</label>
+                                {{ executive_form.date_start_post|attr:"id:from"|attr:"class:w-100" }}
+                            </div>
+                            <div class='col-lg-5'>
+                                <label for='until'>تا تاریخ</label>
+                                {{ executive_form.date_end_post|attr:"id:until"|attr:"class:w-100" }}
+                            </div>
+                        </div>
+                        <div class='row'>
+                            <div class='col-lg-12'>
+                                <label for='workplace'>محل خدمت</label>
+                                {{ executive_form.organization|attr:"id:workplace"|attr:"class:w-100" }}
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class='col-lg-12'>
+                                <label for='exe-city'>شهر</label>
+                                {{ executive_form.city|attr:"id:exe-city"|attr:"class:w-100" }}
+                            </div>
+                        </div>
                     </div>
-                    <div class='col-lg-5'>
-                        <label for='from'>از تاریخ</label>
-                        <input type='text' id='from' class='w-100'>
+                    <div class="col-6 flex-display">
+                        <svg xmlns="http://www.w3.org/2000/svg" style="width: 100%;"
+                             xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 50 50.93">
+                            <defs>
+                                <style>
+                                    .execution-cls-1 {
+                                        fill: none;
+                                    }
+
+                                    .execution-cls-2 {
+                                        fill: #f8fdf7;
+                                    }
+
+                                    .execution-cls-3 {
+                                        clip-path: url(#clip-path);
+                                    }
+
+                                    .execution-cls-4 {
+                                        fill: #171717;
+                                    }
+
+                                    .execution-cls-10, .execution-cls-11, .execution-cls-12, .execution-cls-13, .execution-cls-14, .execution-cls-15, .execution-cls-4, .execution-cls-5, .execution-cls-6, .execution-cls-7, .execution-cls-8, .execution-cls-9 {
+                                        fill-rule: evenodd;
+                                    }
+
+                                    .execution-cls-5 {
+                                        fill: #2e2e2e;
+                                    }
+
+                                    .execution-cls-6 {
+                                        fill: #3d3d3d;
+                                    }
+
+                                    .execution-cls-7 {
+                                        fill: #f0c17d;
+                                    }
+
+                                    .execution-cls-8 {
+                                        fill: #e0af6a;
+                                    }
+
+                                    .execution-cls-9 {
+                                        fill: #ffdba7;
+                                    }
+
+                                    .execution-cls-10 {
+                                        fill: #bddff0;
+                                    }
+
+                                    .execution-cls-11 {
+                                        fill: #e8f7fa;
+                                    }
+
+                                    .execution-cls-12 {
+                                        fill: #026499;
+                                    }
+
+                                    .execution-cls-13 {
+                                        fill: #015583;
+                                    }
+
+                                    .execution-cls-14 {
+                                        fill: #014b78;
+                                    }
+
+                                    .execution-cls-15 {
+                                        fill: #d1edfb;
+                                    }
+                                </style>
+                                <clipPath id="clip-path" transform="translate(-1.5)">
+                                    <rect class="execution-cls-1" y="5.63" width="45.62" height="42.47"></rect>
+                                </clipPath>
+                            </defs>
+                            <title>Asset 2</title>
+                            <g id="Layer_2" data-name="Layer 2">
+                                <g id="Layer_1-2" data-name="Layer 1">
+                                    <path class="execution-cls-2"
+                                          d="M1.86,19.17C3.1,10.62,8.13.07,13.66,0c4.59-.06,5.08,7.2,13,12.59,11,7.46,21.75,1.49,24.27,5.9,4.3,7.5-18.75,38.89-35.73,33.12C4.67,48,.11,31.24,1.86,19.17Z"
+                                          transform="translate(-1.5)"></path>
+                                    <g class="execution-cls-3">
+                                        <polygon class="execution-cls-4"
+                                                 points="27.3 93.47 22.82 93.47 22.23 96.93 28.66 96.89 27.3 93.47"></polygon>
+                                        <polygon class="execution-cls-5"
+                                                 points="28.78 96.93 26.78 95.4 23.54 95.4 22.31 96.93 28.78 96.93"></polygon>
+                                        <polygon class="execution-cls-5"
+                                                 points="14.1 93.47 18.58 93.47 19.25 96.93 12.82 96.89 14.1 93.47"></polygon>
+                                        <polygon class="execution-cls-6"
+                                                 points="12.7 96.93 14.67 95.4 17.91 95.4 19.17 96.93 12.7 96.93"></polygon>
+                                        <polygon class="execution-cls-6"
+                                                 points="20.4 56.86 19.41 73.03 18.76 93.67 14.02 93.62 13.53 78.71 13.85 73.36 12.56 54.62 12.94 44.19 26.95 43.56 27.18 73.41 27.64 78.39 22.97 72.84 20.75 56.86 20.4 56.86"></polygon>
+                                        <polygon class="execution-cls-5"
+                                                 points="19.63 69.39 19.41 73.03 18.76 93.67 16.84 93.65 16.78 84.74 16.49 74.46 18.31 72.82 19.63 69.39"></polygon>
+                                        <polygon class="execution-cls-5"
+                                                 points="20.57 43.56 26.95 43.56 28.58 50.48 28.47 56.08 27.66 73.41 27.93 78.25 27.32 93.48 22.82 93.62 22.1 73.08 20.75 56.86 20.57 56.86 20.57 43.56"></polygon>
+                                        <polygon class="execution-cls-4"
+                                                 points="23.13 43.56 26.95 43.56 28.58 50.48 28.47 56.08 27.66 73.41 27.93 78.25 27.32 93.48 25.56 93.53 25.33 79.45 24.75 75.71 26.19 73.45 26.93 64.71 27.3 55.56 26.14 53.4 24.82 51.02 23.13 43.56"></polygon>
+                                        <path class="execution-cls-7"
+                                              d="M19.06,20.56a3.06,3.06,0,0,0,.34-2.51c1.89,0,3.32,0,5.21,0a3.19,3.19,0,0,0,.4,2.59c.16.25-.76,1.05-.53,1.25l-2.42,2.95Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-8"
+                                              d="M22.06,24.84V18.08l2.55,0A3.2,3.2,0,0,0,25,20.66C25.56,21.46,22.55,24.33,22.06,24.84Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-9"
+                                              d="M22.14,20.29h-.05a3.18,3.18,0,0,1-1.24-.14c-.31-.14-.47-.45-.9-.87s-1-.72-1.2-1.11a6.9,6.9,0,0,1-.24-1.68c-.34.19-.71-.8-.79-1.12-.1-.48-.45-1.29-.55-1.84-.07-.31,0-.56.08-.63s.45-.08.78.37c0-.38,0-.78,0-1.2a9.66,9.66,0,0,1,.05-2,2.34,2.34,0,0,1,.77-1.43h0a3.83,3.83,0,0,1,.85-.57h0l.06,0h0l.05,0,.05,0,0,0,.05,0,.07,0h0l.1,0h0a5.53,5.53,0,0,1,2.65-.25,4.54,4.54,0,0,1,2.35,1A2.39,2.39,0,0,1,26,10.07a11.23,11.23,0,0,1,0,2,11.83,11.83,0,0,0,0,1.21c.32-.44.55-.53.77-.36s.15.32.08.63c-.1.55-.45,1.36-.55,1.84-.08.32-.44,1.28-.78,1.12a5.83,5.83,0,0,1-.23,1.64c-.16.39-.82.76-1.19,1.12s-.58.74-.9.88A2.67,2.67,0,0,1,22.14,20.29Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-7"
+                                              d="M22.14,20.29h-.08V7.55a5.69,5.69,0,0,1,.83.06,4.54,4.54,0,0,1,2.35,1A2.39,2.39,0,0,1,26,10.07a11.23,11.23,0,0,1,0,2,11.83,11.83,0,0,0,0,1.21c.32-.44.55-.53.77-.36s.15.32.08.63c-.1.55-.45,1.36-.55,1.84-.08.32-.44,1.28-.78,1.12a5.83,5.83,0,0,1-.23,1.64c-.16.39-.82.76-1.19,1.12s-.58.74-.9.88A2.67,2.67,0,0,1,22.14,20.29Z"
+                                              transform="translate(-1.5)"></path>
+                                        <polygon class="execution-cls-10"
+                                                 points="16.92 21.21 20.58 21.61 24.3 21.19 23.95 45.71 17.3 45.71 16.92 21.21"></polygon>
+                                        <path class="execution-cls-11"
+                                              d="M25.08,19.88a1.65,1.65,0,0,0,.71,1.26L24,24.27,22,21.56C23,21,24.7,20.37,25.08,19.88Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-11"
+                                              d="M19.05,19.88a1.63,1.63,0,0,1-.72,1.26l1.84,3.13,1.93-2.71C21.14,21,19.42,20.37,19.05,19.88Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-5"
+                                              d="M18.41,21.15a7.92,7.92,0,0,1-4.07,1.4c-3.19-.12-4.06.22-4.29,2.6,0,.1,0,6.22,0,7.61H21C20.2,29.74,19.11,23.22,18.41,21.15Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-12"
+                                              d="M18.41,21.15a6.47,6.47,0,0,1-1.87,1l0,0-.1,4L18.19,26l-1,1.33,1.51,5.48H21C20.19,29.74,19.11,23.22,18.41,21.15Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-5"
+                                              d="M13.64,54.48l8.42.43L23.3,44.3,22.06,37,17.18,22.24c-.35.07-1.44.72-1.84.74-1.5-.2-3.88-.37-4.72,1.17-1.28,2.34,1.43,6,2.46,7.93l1.16,12.47Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-4"
+                                              d="M30.49,54.48l-8.43.43V37L27,22.24c.35.07,1.44.72,1.84.74,1.49-.2,3.88-.37,4.72,1.17,1.28,2.34-1.43,6-2.46,7.93L29.89,44.55Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-4"
+                                              d="M25.71,21.15a8,8,0,0,0,4.08,1.4c3.19-.12,4.06.22,4.28,2.6,0,.1,0,6.21,0,7.61h-11C23.93,29.77,25,23.25,25.71,21.15Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-5"
+                                              d="M25.71,21.15a6.54,6.54,0,0,0,1.88,1l0,0,.09,4L25.93,26l1.21,2.22-5,8.94,1-4.35C23.94,29.76,25,23.24,25.71,21.15Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-6"
+                                              d="M18.42,21.15a6.68,6.68,0,0,1-1.88,1l0,0-.1,4L18.2,26,17,28.17l5,8.94-1-4.35C20.19,29.76,19.12,23.24,18.42,21.15Z"
+                                              transform="translate(-1.5)"></path>
+                                        <polygon class="execution-cls-13"
+                                                 points="20.48 21.69 19.53 23.09 19.55 23.45 20.34 24.25 19.46 25.66 20.56 37.06 20.57 36.91 20.74 26.63 20.57 21.69 20.48 21.69"></polygon>
+                                        <polygon class="execution-cls-14"
+                                                 points="20.65 21.69 21.61 23.09 21.58 23.45 20.8 24.25 21.68 25.66 20.58 37.06 20.57 36.91 20.57 21.69 20.65 21.69"></polygon>
+                                        <path class="execution-cls-5"
+                                              d="M12.72,22.75,11.65,23C10.5,23.3,10,24.51,10,25.86l0,11.41c0,5.21,2.95,5.44,4.37,4a3.24,3.24,0,0,0,.84-2.46l.44-14.19C15.76,23.3,13.87,22.46,12.72,22.75Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-4"
+                                              d="M31.43,22.75,32.5,23c1.15.28,1.62,1.49,1.62,2.84l0,11.41c0,5.21-2.88,5.82-4.31,4.41a4.31,4.31,0,0,1-.9-2.84l-.44-14.19C28.39,23.3,30.28,22.46,31.43,22.75Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-7"
+                                              d="M20.19,35.32l-4.25-1.54c-.25-.09-.74-.08-.8.16l-.65,2.34c-.07.23-.15.43.12.51l2.62.79a1,1,0,0,0,.8-.15l2.25-1.6C20.51,35.66,20.45,35.41,20.19,35.32Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-7"
+                                              d="M12.83,33.62l2.3.86a.89.89,0,0,0,1-.38h0c.09-.17-.23-.3-.58-.43l-2.34-.82C12.56,32.58,12,33.32,12.83,33.62Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-7"
+                                              d="M12.71,34.6l2.17.81a.83.83,0,0,0,.92-.4h0c.14-.3-.79-.55-1.11-.66l-1.58-.58C12.49,33.54,11.86,34.28,12.71,34.6Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-7"
+                                              d="M12.62,35.39l2,.73a.55.55,0,0,0,.68-.35h0c.07-.25-.72-.45-1-.55l-1.51-.54C12.28,34.49,11.89,35.12,12.62,35.39Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-7"
+                                              d="M12.8,36.14l1.84.65a.46.46,0,0,0,.56-.3h0c.05-.21-.61-.36-.83-.44L13,35.56C12.51,35.4,12.19,35.93,12.8,36.14Z"
+                                              transform="translate(-1.5)"></path>
+                                        <path class="execution-cls-7"
+                                              d="M27.11,34a3.86,3.86,0,0,1,1.55.3c.81.39,1.41,1.85,2.25,3.19l-3.49-.74Z"
+                                              transform="translate(-1.5)"></path>
+                                        <polygon class="execution-cls-11"
+                                                 points="17.57 34.68 15.33 33.98 14.8 38.53 17.23 39.36 17.57 34.68"></polygon>
+                                        <path class="execution-cls-5"
+                                              d="M18.6,34.43l13.45,3.21c2.53.61,1.9,5.46-1.56,4.63l-12.63-3Z"
+                                              transform="translate(-1.5)"></path>
+                                        <polygon class="execution-cls-15"
+                                                 points="23.44 34.41 25.68 33.71 26.21 38.25 23.78 39.08 23.44 34.41"></polygon>
+                                        <path class="execution-cls-6"
+                                              d="M25.39,34.16,12,37.37c-2.53.61-1.9,5.45,1.56,4.63l12.63-3Z"
+                                              transform="translate(-1.5)"></path>
+                                    </g>
+                                    <path class="execution-cls-6"
+                                          d="M19.39,12.88c-.28.33-1,.57-.89,2.71-.92-3.35-1.41-5.74.59-7.24,2.63-2,5.8-.71,6.06.05,2.1.74,1.26,4.07.68,6.72a9.1,9.1,0,0,0-1-4.14.67.67,0,0,0-.48-.19C22.82,10.69,21.7,13.57,19.39,12.88Z"
+                                          transform="translate(-1.5)"></path>
+                                    <path class="execution-cls-5"
+                                          d="M22.07,7.3c1.6-.06,2.92.62,3.08,1.1,2.1.73,1.26,4.07.68,6.72a9.1,9.1,0,0,0-1-4.14.67.67,0,0,0-.48-.19c-.81,0-1.51.71-2.31,1.35Z"
+                                          transform="translate(-1.5)"></path>
+                                </g>
+                            </g>
+                        </svg>
                     </div>
-                    <div class='col-lg-5'>
-                        <label for='until'>تا تاریخ</label>
-                        <input type='text' id='until' class='w-100'>
-                    </div>
-                </div>
-                <div class='row'>
-                    <div class='col-lg-5'>
-                        <label for='workplace'>محل خدمت</label>
-                        <input type='text' id='workplace' class='w-100'>
-                    </div>
-                    <div class='col-lg-4'>
-                        <label for='exe-city'>شهر</label>
-                        <input type='text' id='exe-city' class='w-100'>
-                    </div>
-                    <div class='col-lg-3'></div>
                 </div>
                 <div class="card-footer">
                     <button class="save-btn" type="submit">افزودن</button>
