--- a/researcher/templates/researcher/layouts/preview_question.html
+++ b/researcher/templates/researcher/layouts/preview_question.html
@@ -1,19 +1,22 @@
+{% extends "researcher/layouts/base_layout.html" %}
 {% load static%}
-<div class="preview-question" style="display: none">
+{% block content %}
+<!-- <div class="preview-question" style="display: none"> -->
     <div class="inner-card">
                         <div class="row">
                             <div class="col-12">
                                 <div class="timer">
-
+                                    <strong>{{rest_days}}</strong>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="textarea-text">
-                                    <span class="title">متن سوال</span>
+                                    <span class="title"><a href="{{attach_file.url}}">{{rest_days}}</a>متن سوال</span>
                                     <div class="body">
                                         لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد. لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+                                        <!-- {{question}} -->
                                     </div>
                                 </div>
                             </div>
@@ -23,7 +26,7 @@
                                 <div class="question-attach text-left">
                                     <ul class="inline-list">
                             <li class="list-item">
-                                <a href="#" class="attach-file">
+                                <a href="{{attach_file.url}}" class="attach-file">
                                     <span class="doc-file"></span>
                                     <span>fileName</span>
                                 </a>
@@ -111,4 +114,5 @@
                                 <button class="success-btn send-answer">ارسال پاسخ</button>
                             </div>
                         </div>
-                </div>
+                <!-- </div> -->
+{% endblock content %}
