--- a/researcher/templates/researcher/question.html
+++ b/researcher/templates/researcher/question.html
@@ -14,7 +14,7 @@
         <div class="col-lg-12">
             <div class="card info-card user-info text-right">
                 <div class="card-header">سوال پژوهشی</div>
-                    {% include 'researcher/layouts/preview_question.html' %}
+                    {#<!-- {% include 'researcher/layouts/preview_question.html' %} -->#}
                     <div class="inner-card card question-initial-info" style="margin-bottom: 0">
                         <div class="row" style="direction: ltr!important;">
                             <div class="col-5">
